--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Spndy</title>
-		<meta name="description" content="Lovable Generated Project" />
-		<meta name="author" content="Lovable" />
-		<meta property="og:image" content="/og-image.png" />
+		<meta name="author" content="MH-Habib" />
+		<meta property="og:title" content="Spndy – Smart Expense Tracker" />
+		<meta
+			property="og:description"
+			content="Track your spending, split bills, and manage expenses with ease."
+		/>
+		<meta property="og:image" content="https://spndy.xyz/preview.png" />
+		<meta property="og:url" content="https://spndy.xyz" />
+		<meta property="og:type" content="website" />
 	</head>
 
 	<body>
