Added theme in all card and pages

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 		<meta property="og:image" content="https://spndy.xyz/preview.png" />
 		<meta property="og:url" content="https://spndy.xyz" />
 		<meta property="og:type" content="website" />
+		<!-- iOS PWA support -->
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta
+			name="apple-mobile-web-app-status-bar-style"
+			content="black-translucent"
+		/>
+		<meta name="apple-mobile-web-app-title" content="Spndy" />
+		<link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
+		<meta name="theme-color" content="#0ea5e9" />
 	</head>
 
 	<body>
